--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,5 +1,24 @@
 .header {
-  padding: 1rem 0 3rem;
+  padding: 0;
+}
+
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-hamburger {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+
+  &:hover {
+    color: darkcyan;
+  }
+
+  @media only screen and (min-width: 600px) {
+    visibility: hidden;
+  }
 }
 
 .title {
@@ -8,23 +27,39 @@
   text-decoration: none;
 }
 
-.nav-list {
-  display: flex;
-  list-style-type: none;
-  margin: 0;
-}
+.nav {
+  position: relative;
 
-.nav-item {
-  color: #999;
-  font-size: 0.9rem;
-  margin-right: 1.3rem;
-  text-decoration: none;
+  .nav-list {
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+    width: 100%;
+    transform: translateX(100vw);
+    margin: 0;
+    transition: transform 0.3s ease-in;
 
-  &:hover {
-    color: #666;
+    @media only screen and (min-width: 600px) {
+      transform: translate(0);
+    }
   }
-}
 
-.active-nav-item {
-  color: #333;
+  .show-nav {
+    transform: translateX(0);
+  }
+
+  .nav-item {
+    color: #000;
+    font-size: 1rem;
+    margin-right: 1.3rem;
+    text-decoration: none;
+
+    &:hover {
+      color: darkcyan;
+    }
+  }
+
+  .active-nav-item {
+    color: darkcyan;
+  }
 }
